auto-test/tests/chapter_18/invalid_types/scalar_required/cast_struct_to_scalar.c
struct s {
  int a;
};

int main(void) {
  struct s x = {1};
  
  int y = (int)x;
  return y;
}